added clickable link to the dialog with info for heap manual editing

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -315,7 +315,9 @@ GitUserReader_error_reading_local_changes = Error reading local changes
 
 HeapSizeCheckerDialog_heap_size_updated = Heap size updated
 
-HeapSizeCheckerDialog_manual_heap_editing = Not enough permission to access the "eclipse.ini". For change the heap size manually you should replace "-Xmx..." by "-Xmx{0}G" in file\n"{1}".\n\nInformation about "eclipse.ini" can be viewed at:\n{2}\n\n
+HeapSizeCheckerDialog_manual_heap_editing = Not enough permission to change heap size from pgCodeKeeper. For change the heap size manually you should replace "-Xmx..." by "-Xmx{0}G" in "eclipse.ini".\n\n"eclipse.ini" location:\n"{1}".
+
+HeapSizeCheckerDialog_manual_heap_editing_link = Information about "eclipse.ini" can be viewed at:
 
 HeapSizeCheckerDialog_manual_heap_editing_title = Manually editing the heap parameter
 
