replaced restart option by info dialog

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -323,7 +323,7 @@ HeapSizeCheckerDialog_manual_heap_editing_title = Manually editing the heap para
 
 HeapSizeCheckerDialog_new_heap_size = New heap size
 
-HeapSizeCheckerDialog_restart_offer = You will need to restart Eclipse for the changes to take effect. \nWould you like to restart now?
+HeapSizeCheckerDialog_restart_offer = You need to restart Eclipse for the changes to take effect.
 
 HeapSizeCheckerDialog_set_heap_size = Set heap size
 
