refactored work with libraries in project explorer
NavigationLibrariesActionProvider: added actions to update and clear cache
DependencyProperties: added option to clear cache
LibraryContainer: moved and divided into typed classes
Activator: added icon for ZIP-files

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -131,6 +131,7 @@ DependencyProperties_add_uri = Add URL
 
 DependencyProperties_attention = Attention
 
+DependencyProperties_clear_libraries_cache=Clear libraries cache
 DependencyProperties_connection_start = Database connection string must start with 'jdbc:'
 
 DependencyProperties_empty_scheme = Empty scheme unsupported
@@ -409,9 +410,13 @@ MockDataWizard_create_data = Create data batch
 
 MockDataWizard_create_data_table = Create data batch for a table
 
+NavigationLibrariesActionProvider_clear_library_cache=Clear library cache
+NavigationLibrariesActionProvider_failed_to_clear_library_cache=Failed to clear library cache
 NavigationLibrariesActionProvider_failed_to_open_library = Failed to open library
+NavigationLibrariesActionProvider_failed_to_refresh_library=Failed to refresh library
 
 NavigationLibrariesActionProvider_open_library = Open library
+NavigationLibrariesActionProvider_refresh_library=Refresh library
 
 NavigatorRootActionProvider_open_action = Open
 
