--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -132,6 +132,8 @@ DependencyProperties_add_uri = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C 
 
 DependencyProperties_attention = \u0412\u043D\u0438\u043C\u0430\u043D\u0438\u0435
 
+DependencyProperties_clear_libraries_cache = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u0438\u0442\u044C \u043A\u044D\u0448 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A
+
 DependencyProperties_connection_start = \u0421\u0442\u0440\u043E\u043A\u0430 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u043A \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445 \u0434\u043E\u043B\u0436\u043D\u0430 \u043D\u0430\u0447\u0438\u043D\u0430\u0442\u044C\u0441\u044F \u0441 'jdbc:'
 
 DependencyProperties_empty_scheme = \u041F\u0443\u0441\u0442\u0430\u044F \u0441\u0445\u0435\u043C\u0430 \u043D\u0435 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u0442\u0441\u044F
@@ -410,9 +412,17 @@ MockDataWizard_create_data = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u
 
 MockDataWizard_create_data_table = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u0430\u043A\u0435\u0442 \u0434\u0430\u043D\u043D\u044B\u0445 \u0434\u043B\u044F \u0442\u0430\u0431\u043B\u0438\u0446\u044B
 
+NavigationLibrariesActionProvider_clear_library_cache = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u043A\u044D\u0448 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0438
+
+NavigationLibrariesActionProvider_failed_to_clear_library_cache = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u043A\u044D\u0448 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0438
+
 NavigationLibrariesActionProvider_failed_to_open_library = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0442\u043A\u0440\u044B\u0442\u044C \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0443
 
+NavigationLibrariesActionProvider_failed_to_refresh_library = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0443
+
 NavigationLibrariesActionProvider_open_library = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0443
+
+NavigationLibrariesActionProvider_refresh_library = \u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0443
 
 NavigatorRootActionProvider_open_action = \u041E\u0442\u043A\u0440\u044B\u0442\u044C
 
