--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -295,6 +295,7 @@ GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification 
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
+GeneralPrefPage_show_diff_erors=Show diff errors
 GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recommended by PostgreSQL)
 
 GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not used for (minutes):
