--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -285,7 +285,7 @@ FilterDialog_sql_filter_placehodlder = Enter sql code
 
 FilterDialog_title = Filters
 
-GeneralPrefPage_alert_if_heap_size_less_then_necessary = Alert if heap size less then necessary
+GeneralPrefPage_alert_if_heap_size_less_then_necessary = Alert if Java heap size less then recommended
 
 GeneralPrefPage_body_depcy_tooltip = Enables dependency tracking from function bodies to other functions.\nMay lead to generation of broken migration scripts.
 
@@ -315,23 +315,23 @@ GitUserReader_error_reading_local_changes = Error reading local changes
 
 HeapSizeCheckerDialog_heap_size_updated = Heap size updated
 
-HeapSizeCheckerDialog_manual_heap_editing = Not enough permission to change heap size from pgCodeKeeper. For change the heap size manually you should replace "-Xmx..." by "-Xmx{0}G" in "eclipse.ini".\n\n"eclipse.ini" location:\n"{1}".
+HeapSizeCheckerDialog_manual_heap_editing = Error while changing eclipse.ini. To change heap size manually you should replace "-Xmx..." with "-Xmx{0}G" in eclipse.ini.\n\neclipse.ini location:\n{1}
 
-HeapSizeCheckerDialog_manual_heap_editing_link = Information about "eclipse.ini" can be viewed at:
+HeapSizeCheckerDialog_manual_heap_editing_link = Information about "eclipse.ini" is available at:
 
-HeapSizeCheckerDialog_manual_heap_editing_title = Manually editing the heap parameter
+HeapSizeCheckerDialog_manual_heap_editing_title = Changing the heap size parameter manually
 
 HeapSizeCheckerDialog_new_heap_size = New heap size
 
-HeapSizeCheckerDialog_restart_offer = You need to restart Eclipse for the changes to take effect.
+HeapSizeCheckerDialog_restart_offer = You need to fully restart Eclipse for changes to take effect.
 
 HeapSizeCheckerDialog_set_heap_size = Set heap size
 
-HeapSizeChecker_do_not_ask_again = Do not ask again.
+HeapSizeChecker_do_not_ask_again = Do not ask again
 
-HeapSizeChecker_heap_size_warning = The heap size has less memory than necessary. For large projects (with more than 1000 objects) the recommended size for pgCodeKeeper work is {0} GB. \nWould you like to change it now?
+HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For large pgCodeKeeper projects (1000 objects or more) recommended heap size is {0} GB. \nWould you like to change it now?
 
-HeapSizeChecker_heap_size_warning_title = Small heap size
+HeapSizeChecker_heap_size_warning_title = Insufficient heap size
 
 IgnoreListEditorDialog_cancel = Cancel
 
