improved heap size check, added null check, used autosave for toggle

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -329,7 +329,7 @@ HeapSizeCheckerDialog_restart_offer = You need to fully restart Eclipse for chan
 
 HeapSizeCheckerDialog_set_heap_size = Set heap size
 
-HeapSizeChecker_do_not_ask_again = Do not ask again
+HeapSizeChecker_always_check_heap_size = Always check heap size
 
 HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For large pgCodeKeeper projects (1000 objects or more) recommended heap size is {0} GB. \nWould you like to change it now?
 
