added message from exception to the dialog window with error, added log

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -317,7 +317,7 @@ GitUserReader_error_reading_local_changes = Error reading local changes
 
 HeapSizeCheckerDialog_heap_size_updated = Heap size updated
 
-HeapSizeCheckerDialog_manual_heap_editing = Error while changing eclipse.ini. To change heap size manually you should replace "-Xmx..." with "-Xmx{0}G" in eclipse.ini.\n\neclipse.ini location:\n{1}
+HeapSizeCheckerDialog_manual_heap_editing = Error while changing eclipse.ini. To change heap size manually you should replace "-Xmx..." with "-Xmx{0}G" in eclipse.ini.\n\neclipse.ini location:\n{1}\n\nError:\n{2}
 
 HeapSizeCheckerDialog_manual_heap_editing_link = Information about "eclipse.ini" is available at:
 
