moved PreferenceStore into earlyStartup methods; l10n
Activator/PreferenceStores broke if acquired in IStartup initialization

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -285,7 +285,7 @@ FilterDialog_sql_filter_placehodlder = Enter sql code
 
 FilterDialog_title = Filters
 
-GeneralPrefPage_alert_if_heap_size_less_then_necessary = Alert if Java heap size less then recommended
+GeneralPrefPage_alert_if_heap_size_less_than_necessary = Alert if Java heap size less than recommended
 
 GeneralPrefPage_body_depcy_tooltip = Enables dependency tracking from function bodies to other functions.\nMay lead to generation of broken migration scripts.
 
