added QUALIFIED option

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -363,6 +363,10 @@ IgnoredObjectPrefListEditor_object_name = Object Name:
 
 IgnoredObjectPrefListEditor_pattern = Pattern (Regex)
 
+IgnoredObjectPrefListEditor_qualified = Qualification
+
+IgnoredObjectPrefListEditor_qualified_name = Qualified name
+
 IgnoredObjectsPrefPage_convert_to_black_list = Black-list
 
 IgnoredObjectsPrefPage_convert_to_white_list = White-list
