added option in UI for create script from selected objects in diff pane

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -115,6 +115,8 @@ DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH s
 
 DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks)
 
+DbUpdatePrefPage_script_from_selected_objs = Create a script only from selected objects in the comparison panel
+
 DbUpdatePrefPage_update_statement = UPDATE statements
 
 DepcyGraphView_project = Project
