--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -116,6 +116,8 @@ DbUpdatePrefPage_alter_seq_restart_statement = \u0412\u044B\u0440\u0430\u0436\u0
 
 DbUpdatePrefPage_print_index_with_concurrently = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C CREATE INDEX CONCURRENTLY (\u0431\u0435\u0437 \u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u043E\u043A)
 
+DbUpdatePrefPage_script_from_selected_objs = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0441\u043A\u0440\u0438\u043F\u0442 \u0442\u043E\u043B\u044C\u043A\u043E \u0438\u0437 \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0445 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u0432 \u043F\u0430\u043D\u0435\u043B\u0438 \u0441\u0440\u0430\u0432\u043D\u0435\u043D\u0438\u044F
+
 DbUpdatePrefPage_update_statement = \u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F UPDATE
 
 DepcyGraphView_project = \u041F\u0440\u043E\u0435\u043A\u0442
