--- a/ru.taximaxim.codekeeper.mainapp/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.mainapp/OSGI-INF/l10n/bundle.properties
@@ -7,4 +7,5 @@ Bundle-Name = pgCodeKeeper
 Bundle-Vendor = Technology, LLC
 
 product.about = pgCodeKeeper\nhttp://pgcodekeeper.org\n\nVersion: {0}, build id: {1}\n\nCopyright \u00A9 Technology, LLC\nhttp://technology45.ru/\n\nThis product includes software developed by the\nEclipse Foundation https://www.eclipse.org
+product.intro = Welcome to pgCodeKeeper!
 product.name  = pgCodeKeeper
