Add option IF (NOT) EXISTS in ui, cli

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -113,6 +113,8 @@ DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
 
+DbUpdatePrefPage_optionIfExists = Print IF NOT EXISTS/IF EXISTS
+
 DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks)
 
 DbUpdatePrefPage_update_statement = UPDATE statements
