added option to ignore differences in column order

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -293,6 +293,8 @@ GeneralPrefPage_clean_parser_cache = Clear parser cache
 
 GeneralPrefPage_enable_body_dependencies = Enable full dependencies from bodies of functions and procedures (experimental)
 
+GeneralPrefPage_ignore_column_order = Ignore differences in table column order
+
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
