--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -112,6 +112,8 @@ DbStorePrefPage_secure_storage_error_text_other = \u041E\u0448\u0438\u0431\u043A
 
 DbStorePrefPage_secure_storage_error_title = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u043F\u0430\u0440\u043E\u043B\u0435\u0439
 
+DbUpdatePrefPage_allow_data_movement = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u043F\u0435\u0440\u0435\u043C\u0435\u0449\u0435\u043D\u0438\u0435 \u0434\u0430\u043D\u043D\u044B\u0445
+
 DbUpdatePrefPage_alter_seq_restart_statement = \u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F ALTER SEQUENCE ... RESTART WITH
 
 DbUpdatePrefPage_print_index_with_concurrently = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C CREATE INDEX CONCURRENTLY (\u0431\u0435\u0437 \u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u043E\u043A)
