Add dinamic caption in db connection dialog page

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -97,7 +97,13 @@ DbStorePicker_load_from_dir = Load from Directory...
 
 DbStorePicker_load_from_file = Load from File...
 
+DbStorePrefPage_add_new0 = Create new DB connection
+
 DbStorePrefPage_already_present = Entry "{0}" is already present in the list!
+
+DbStorePrefPage_copy0 = Copy DB connection 
+
+DbStorePrefPage_edit0 = Edit DB connection
 
 DbStorePrefPage_pg_pass_file_filter = pgpass files
 
