fixed Messages format

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -113,9 +113,9 @@ DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
 
-DbUpdatePrefPage_optionDropObject1 = Print DROP before CREATE statement
+DbUpdatePrefPage_option_drop_object=Print DROP before CREATE statement
 
-DbUpdatePrefPage_optionIfExists = Print IF NOT EXISTS/IF EXISTS
+DbUpdatePrefPage_option_if_exists=Print IF NOT EXISTS/IF EXISTS
 
 DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks)
 
