fixed label for column

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -947,17 +947,15 @@ delete = Delete
 
 diffPresentationPane_getting_changes_for_diff = Getting changes
 
-diffTableViewer_change_type = Change Type
+diffTableViewer_change_type_for_database = Change type for DB
+
+diffTableViewer_change_type_for_project = Change type for project
 
 diffTableViewer_container = Container
 
 diffTableViewer_db_user = Database user
 
 diffTableViewer_deselect_child_elements = Deselect Child Elements
-
-diffTableViewer_for_database = \ for DB
-
-diffTableViewer_for_project = \ for project
 
 diffTableViewer_git_user = Git user
 
