--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -948,17 +948,15 @@ delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 
 diffPresentationPane_getting_changes_for_diff = \u041F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439
 
-diffTableViewer_change_type = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+diffTableViewer_change_type_for_database = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0411\u0414
+
+diffTableViewer_change_type_for_project = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
 diffTableViewer_container = \u041A\u043E\u043D\u0442\u0435\u0439\u043D\u0435\u0440
 
 diffTableViewer_db_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0411\u0414
 
 diffTableViewer_deselect_child_elements = \u0421\u043D\u044F\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u0441 \u0434\u043E\u0447\u0435\u0440\u043D\u0438\u0445 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432
-
-diffTableViewer_for_database = \ \u0434\u043B\u044F \u0411\u0414
-
-diffTableViewer_for_project = \ \u0434\u043B\u044F \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
 diffTableViewer_git_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C git
 
