DiffTableViewer: added ability to copy object names

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -189,6 +189,8 @@ DiffTableViewer_collapse_all = Collapse All
 
 DiffTableViewer_copy_as_regex = Copy Checked Elements as Filter Regex
 
+DiffTableViewer_copy_object_names = Copy object names
+
 DiffTableViewer_database = Database
 
 DiffTableViewer_directory = Directory
