--- a/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
+++ b/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
@@ -3,6 +3,14 @@
 
 Connection_DatabaseJdbcAccessError = Error while reading database schema via JDBC, error occured while processing {1}\n{0}
 
+ProjectUpdater_error_backup_restore = Error while restoring backups after update error! Please repair your project manually before continuing!
+
+ProjectUpdater_error_no_tempdir = Couldn''t create temp directory for project update! {0}
+
+ProjectUpdater_error_update = Error while updating project: {0}
+
+ProjectUpdater_old_db_null = Old database should not be null for partial update.
+
 # Storage
 Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new table has no STORAGE set but in old table storage was set. Unable to determine STORAGE type.
 
