--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -117,7 +117,7 @@ DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords i
 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
-DbUpdatePrefPage_allow_data_movement = Allow data movement
+DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
 
