1. Удалено текстовое содержимое кнопки "Получить изменения". Добавили тултип к этой кнопке.
2. Убрали радиобаттоны "Проекту/БД".

3. Добавили пункты "Проекту/БД" в контекстное меню кнопки Применить к

4. Переместили комбобокс с выбором бд для режима редактора-кипера в
тулбар редактора.

5. Убрали кнопки "Открыть хранилище кода". Его функционал перемещен в
комбо с выбором бд.

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -96,6 +96,7 @@ DbStorePicker_db_schema_source = DB Schema Source:
 DbStorePicker_load_from_dir = Load from Directory...
 
 DbStorePicker_load_from_file = Load from File...
+DbStorePicker_open_db_store = Add DB connection...
 
 DbStorePrefPage_action_add_new = Create new DB connection
 
