Decorator, status bar,new icons
Delete "Apply to" control's title.

Add information text in status bar.

Change "Get Changes", "Open New Sql editor" icons.

Add decorator in "Apply to" control.

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -96,6 +96,7 @@ DbStorePicker_db_schema_source = DB Schema Source:
 DbStorePicker_load_from_dir = Load from Directory...
 
 DbStorePicker_load_from_file = Load from File...
+
 DbStorePicker_open_db_store = Add DB connection...
 
 DbStorePrefPage_action_add_new = Create new DB connection
@@ -216,15 +217,19 @@ DiffTableViewer_reading_git_history = Reading git history
 
 DiffTableViewer_reset_sorting = Ctrl+click to reset sorting
 
+DiffTableViewer_save_to_DB = DB
+
+DiffTableViewer_save_to_project = project 
+
 DiffTableViewer_selected = Selected: {0}
 
-DiffTableViewer_selected_count = Selected objects: {0} out of {1}
+DiffTableViewer_selected_count = Selected objects for save in {2}: {0} out of {1}
 
 DiffTableViewer_show_filters = Show filters...
 
 DiffTableViewer_to_database = DB
 
-DiffTableViewer_to_project = Project
+DiffTableViewer_to_project = project
 
 DiffTableViewer_type = Type: 
 
@@ -318,7 +323,7 @@ GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not use
 
 GetChanges_select_source = Choose source
 
-GetChanges_select_source_msg = Please choose a source to get changes from in the drop-down list on the toolbar.
+GetChanges_select_source_msg = Please choose a source to get changes from in the drop-down list in the menu of the button "Get Changes".
 
 GetSystemObjects_save_dialog_title = Save system objects
 
