Validation object name
Добавили проверку существования файла с таким именем при переименовании
объекта и файла

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -703,6 +703,8 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
+RenameDefinitionChange_error_resource_already_exists = A file or folder with this name already exists
+
 SQLEditorCompletionProcessor_show_keywords = Press "{0}" to show Objects/Keywords
 
 SQLEditorCompletionProcessor_show_templates = Press "{0}" to show SQL Templates
