--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -225,13 +225,13 @@ DiffTableViewer_save_to_project = project
 
 DiffTableViewer_selected = Selected: {0}
 
-DiffTableViewer_selected_count = Selected objects for save in {2}: {0} out of {1}
+DiffTableViewer_selected_count = Selected {0} out of {1} objects for migration into {2}
 
 DiffTableViewer_show_filters = Show filters...
 
 DiffTableViewer_to_database = DB
 
-DiffTableViewer_to_project = project
+DiffTableViewer_to_project = Project
 
 DiffTableViewer_type = Type: 
 
@@ -325,7 +325,7 @@ GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not use
 
 GetChanges_select_source = Choose source
 
-GetChanges_select_source_msg = Please choose a source to get changes from in the drop-down list in the menu of the button "Get Changes".
+GetChanges_select_source_msg = Please choose a source to get changes from from the drop-down menu of the "Get Changes" button.
 
 GetSystemObjects_save_dialog_title = Save system objects
 
