--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -186,7 +186,7 @@ DiffPresentationPane_sql_file_filter = \u0424\u0430\u0439\u043B\u044B SQL
 
 DiffPresentationPane_zip_file_filter = \u0424\u0430\u0439\u043B\u044B ZIP
 
-DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A
+DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
 
 DiffTableViewer_apply_to_custom = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438...
 
@@ -226,13 +226,13 @@ DiffTableViewer_save_to_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0435
 
 DiffTableViewer_selected = \u0412\u044B\u0431\u0440\u0430\u043D\u043E: {0} 
 
-DiffTableViewer_selected_count = \u0412\u044B\u0431\u0440\u0430\u043D\u043E \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 {0} \u0438\u0437 {1} \u0434\u043B\u044F \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u044F \u0432 {2}
+DiffTableViewer_selected_count = \u0412\u044B\u0431\u0440\u0430\u043D\u043E \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 {0} \u0438\u0437 {1} \u0434\u043B\u044F \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438 \u0432 {2}
 
 DiffTableViewer_show_filters = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0444\u0438\u043B\u044C\u0442\u0440\u044B...
 
-DiffTableViewer_to_database = \u0411\u0414
+DiffTableViewer_to_database = \u043A \u0411\u0414
 
-DiffTableViewer_to_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0443
+DiffTableViewer_to_project = \u043A \u043F\u0440\u043E\u0435\u043A\u0442\u0443
 
 DiffTableViewer_type = \u0422\u0438\u043F: 
 
@@ -326,7 +326,7 @@ GeneralPrefPage_time_to_clean_parser_cache = \u041E\u0441\u0432\u043E\u0431\u043
 
 GetChanges_select_source = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A
 
-GetChanges_select_source_msg = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u0434\u043B\u044F \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u0438\u0437 \u0432\u044B\u043F\u0430\u0434\u0430\u044E\u0449\u0435\u0433\u043E \u0441\u043F\u0438\u0441\u043A\u0430 \u043C\u0435\u043D\u044E \u043A\u043D\u043E\u043F\u043A\u0438 "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F".
+GetChanges_select_source_msg = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u0434\u043B\u044F \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u0438\u0437 \u0432\u044B\u043F\u0430\u0434\u0430\u044E\u0449\u0435\u0433\u043E \u043C\u0435\u043D\u044E \u043A\u043D\u043E\u043F\u043A\u0438 "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F".
 
 GetSystemObjects_save_dialog_title = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0441\u0438\u0441\u0442\u0435\u043C\u043D\u044B\u0435 \u043E\u0431\u044A\u0435\u043A\u0442\u044B
 
