--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -597,6 +597,12 @@ PgPassDialog_title = Pgpass sources list
 
 PrefListEditor_cannot_add = Cannot add item!
 
+ProjectEditorDiffer_apply_db = DB
+
+ProjectEditorDiffer_apply_project = project
+
+ProjectEditorDiffer_apply_to = \ into 
+
 ProjectEditorDiffer_changed_direction_of_roll_on = You changed the migration direction. Now selected changes will apply to {0}.
 
 ProjectEditorDiffer_changed_direction_of_roll_on_title = Changed the migration direction
@@ -629,6 +635,8 @@ ProjectEditorDiffer_library_duplication_exception = Object overrides are present
 
 ProjectEditorDiffer_no_differences = No changes found.
 
+ProjectEditorDiffer_not_selected = <not selected>
+
 ProjectEditorDiffer_override_cancel = Cancel
 
 ProjectEditorDiffer_override_objects = Override objects
@@ -640,6 +648,8 @@ ProjectEditorDiffer_project = project
 ProjectEditorDiffer_script_creation_message = Save migration script file in project?
 
 ProjectEditorDiffer_script_creation_title = Save migration in project?
+
+ProjectEditorDiffer_work_with = Differences with 
 
 ProjectEditorInput_pgcodekeeper_project = {0} (pgCodeKeeper Project)
 
@@ -800,6 +810,8 @@ TreeDiffer_loading_schema_from = Loading DB schema from {0}
 TreeDiffer_schema_load_error = Error while loading DB schema
 
 TreeDiffer_unknown_error = Unknown error while loading DB schema
+
+UIProjectLoader_error_loading_structure = Error while loading project structure
 
 UiProgressReporter_warning = WARNING: 
 
