--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -598,6 +598,12 @@ PgPassDialog_title = \u0421\u043F\u0438\u0441\u043E\u043A \u0438\u0441\u0442\u04
 
 PrefListEditor_cannot_add = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442!
 
+ProjectEditorDiffer_apply_db = \u0411\u0414
+
+ProjectEditorDiffer_apply_project = \u043F\u0440\u043E\u0435\u043A\u0442
+
+ProjectEditorDiffer_apply_to = \ \u0432 
+
 ProjectEditorDiffer_changed_direction_of_roll_on = \u0412\u044B \u0438\u0437\u043C\u0435\u043D\u0438\u043B\u0438 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438. \u0422\u0435\u043F\u0435\u0440\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043F\u0440\u0438\u043C\u0435\u043D\u044F\u0442\u0441\u044F \u043A {0}.
 
 ProjectEditorDiffer_changed_direction_of_roll_on_title = \u0418\u0437\u043C\u0435\u043D\u0438\u043B\u043E\u0441\u044C \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438
@@ -630,6 +636,8 @@ ProjectEditorDiffer_library_duplication_exception = \u0412 \u0431\u0438\u0431\u0
 
 ProjectEditorDiffer_no_differences = \u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E.
 
+ProjectEditorDiffer_not_selected = <\u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u043E>
+
 ProjectEditorDiffer_override_cancel = \u041E\u0442\u043C\u0435\u043D\u0430
 
 ProjectEditorDiffer_override_objects = \u041F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u0442\u044C \u043E\u0431\u044A\u0435\u043A\u0442\u044B
@@ -641,6 +649,8 @@ ProjectEditorDiffer_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0443
 ProjectEditorDiffer_script_creation_message = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0444\u0430\u0439\u043B \u0441\u043A\u0440\u0438\u043F\u0442\u0430 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438 \u0432 \u043F\u0440\u043E\u0435\u043A\u0442\u0435?
 
 ProjectEditorDiffer_script_creation_title = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u044E \u0432 \u043F\u0440\u043E\u0435\u043A\u0442\u0435?
+
+ProjectEditorDiffer_work_with = \u0420\u0430\u0437\u043B\u0438\u0447\u0438\u044F \u0441 
 
 ProjectEditorInput_pgcodekeeper_project = {0} (\u043F\u0440\u043E\u0435\u043A\u0442 pgCodeKeeper)
 
@@ -801,6 +811,8 @@ TreeDiffer_loading_schema_from = \u0417\u0430\u0433\u0440\u0443\u0437\u043A\u043
 TreeDiffer_schema_load_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 \u0441\u0445\u0435\u043C\u044B \u0411\u0414
 
 TreeDiffer_unknown_error = \u041D\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043D\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 \u0441\u0445\u0435\u043C\u044B \u0411\u0414
+
+UIProjectLoader_error_loading_structure = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 \u0441\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u044B \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
 UiProgressReporter_warning = \u041F\u0420\u0415\u0414\u0423\u041F\u0420: 
 
