Added support for filtering schemes when loading from the pgdatabase

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -393,6 +393,16 @@ IgnoredObjectsPrefPage_these_objects_are_ignored_info = These objects are ignore
 
 IgnoredObjectsPrefPage_these_objects_are_ignored_info_white = All objects except these are ignored when comparing databases.
 
+IgnoredSchemaPrefListEditor_add_schema = Enter schema name
+
+IgnoredSchemaPrefListEditor_black_list_schema_ignor = These schemas are ignored when databases are loading.
+
+IgnoredSchemaPrefListEditor_schema_ignor = These schemas are ignored when db load
+
+IgnoredSchemaPrefListEditor_schema_name = Schema name
+
+IgnoredSchemaPrefListEditor_white_list_schema_ignor = All objects except these are ignored when databases are loading.
+
 ImportProjWizard_title = Import pgCodeKeeper project
 
 LibraryContainer_root = Referenced Libraries
