--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -74,6 +74,7 @@ page.name.dbstore             = DB Store
 page.name.dbupdate_properties = Update DB
 page.name.ignoredLists        = Ignore lists
 page.name.ignored_objects     = Ignored Objects
+page.name.ignored_schema      = Ignored Schema
 page.name.keeperPrefPage      = pgCodeKeeper
 page.name.keeperPropPage      = pgCodeKeeper
 page.name.libraryDependencies = Library dependencies
