--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -74,6 +74,7 @@ page.name.dbstore             = \u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449
 page.name.dbupdate_properties = \u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 \u0411\u0414
 page.name.ignoredLists        = \u0421\u043F\u0438\u0441\u043A\u0438 \u0438\u0441\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0439
 page.name.ignored_objects     = \u0418\u0441\u043A\u043B\u044E\u0447\u0435\u043D\u043D\u044B\u0435 \u043E\u0431\u044A\u0435\u043A\u0442\u044B
+page.name.ignored_schema      = \u0418\u0441\u043A\u043B\u044E\u0447\u0435\u043D\u043D\u044B\u0435 \u0441\u0445\u0435\u043C\u044B
 page.name.keeperPrefPage      = pgCodeKeeper
 page.name.keeperPropPage      = pgCodeKeeper
 page.name.libraryDependencies = \u0411\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u0447\u043D\u044B\u0435 \u0437\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0438
