removed separate TabsToSpaces setting
using indent/indent size setting for tab replacement
attempted to move away from Eclipse tab settings to our own settings - more refactoring required, commented out the work for now
l10n

fixed tests to work with new settings, and some more:
parse errors in AddWhitespaceBeforeOpConfigProvider/After tests, more test data
fixed 0-width tab indent in IndentTypeConfigProvider
fixed tab replacement width in AddSpacesForTabsConfigProvider

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -735,19 +735,15 @@ SQLEditorFormatterPrefPage_add_whitespace_before_operators = Add whitespace befo
 
 SQLEditorFormatterPrefPage_disable = Disable
 
-SQLEditorFormatterPrefPage_indent_size = Indent size
+SQLEditorFormatterPrefPage_indent_size = Indent/tab size
 
 SQLEditorFormatterPrefPage_indent_type = Indent type
 
 SQLEditorFormatterPrefPage_remove_trailing_whitespace = Remove trailing whitespace
 
-SQLEditorFormatterPrefPage_replace_tab_with_whitespaces = Replace tab with whitespaces
-
 SQLEditorFormatterPrefPage_tab = Tabs
 
-SQLEditorFormatterPrefPage_whitespace = Whitespaces
-
-SQLEditorFormatterPrefPage_whitespace_count = Whitespace count
+SQLEditorFormatterPrefPage_whitespace = Spaces
 
 SQLEditorMainPage_bracket_highlighting = Bracket highlighting
 
