--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -729,11 +729,11 @@ SQLEditorContentOutlinePage_hide_non_dangerous = Hide non-dangerous statements
 
 SQLEditorContentOutlinePage_sort_alphabetically = Sort alphabetically 
 
-SQLEditorFormatterPrefPage_add_whitespace_after_operators = Add whitespace after operators
+SQLEditorFormatterPrefPage_add_whitespace_after_operators = Add a space after operators
 
-SQLEditorFormatterPrefPage_add_whitespace_before_operators = Add whitespace before operators
+SQLEditorFormatterPrefPage_add_whitespace_before_operators = Add a space before operators
 
-SQLEditorFormatterPrefPage_disable = Disable
+SQLEditorFormatterPrefPage_disable = Disabled
 
 SQLEditorFormatterPrefPage_indent_size = Indent/tab size
 
