--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -730,11 +730,11 @@ SQLEditorContentOutlinePage_hide_non_dangerous = \u0421\u043A\u0440\u044B\u0442\
 
 SQLEditorContentOutlinePage_sort_alphabetically = \u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u043E \u0430\u043B\u0444\u0430\u0432\u0438\u0442\u0443
 
-SQLEditorFormatterPrefPage_add_whitespace_after_operators = \u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B\u044B \u043F\u043E\u0441\u043B\u0435 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u043E\u0432
+SQLEditorFormatterPrefPage_add_whitespace_after_operators = \u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B \u043F\u043E\u0441\u043B\u0435 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u043E\u0432
 
-SQLEditorFormatterPrefPage_add_whitespace_before_operators = \u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B\u044B \u043F\u0435\u0440\u0435\u0434 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430\u043C\u0438
+SQLEditorFormatterPrefPage_add_whitespace_before_operators = \u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B \u043F\u0435\u0440\u0435\u0434 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430\u043C\u0438
 
-SQLEditorFormatterPrefPage_disable = \u041E\u0442\u043A\u043B\u044E\u0447\u0435\u043D
+SQLEditorFormatterPrefPage_disable = \u041E\u0442\u043A\u043B\u044E\u0447\u0435\u043D\u043E
 
 SQLEditorFormatterPrefPage_indent_size = \u0428\u0438\u0440\u0438\u043D\u0430 \u043E\u0442\u0441\u0442\u0443\u043F\u0430/\u0442\u0430\u0431\u0430
 
