--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -401,11 +401,11 @@ IgnoredObjectsPrefPage_these_objects_are_ignored_info_white = All objects except
 
 IgnoredSchemaPrefListEditor_add_schema = Enter schema name
 
-IgnoredSchemaPrefListEditor_black_list_schema_ignor = These schemas are ignored when databases are loading.
+IgnoredSchemaPrefListEditor_black_list_schema_ignor = These schemas are ignored when loading databases.
 
 IgnoredSchemaPrefListEditor_schema_name = Schema name
 
-IgnoredSchemaPrefListEditor_white_list_schema_ignor = All objects except these are ignored when databases are loading.
+IgnoredSchemaPrefListEditor_white_list_schema_ignor = All schemas except these are ignored when loading databases.
 
 ImportProjWizard_title = Import pgCodeKeeper project
 
