--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -400,11 +400,7 @@ IgnoredObjectsPrefPage_these_objects_are_ignored_info = \u042D\u0442\u0438 \u043
 
 IgnoredObjectsPrefPage_these_objects_are_ignored_info_white = \u0412\u0441\u0435 \u043E\u0431\u044A\u0435\u043A\u0442\u044B, \u043A\u0440\u043E\u043C\u0435 \u044D\u0442\u0438\u0445, \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u0443\u044E\u0442\u0441\u044F \u043F\u0440\u0438 \u0441\u0440\u0430\u0432\u043D\u0435\u043D\u0438\u0438 \u0431\u0430\u0437 \u0434\u0430\u043D\u043D\u044B\u0445.
 
-IgnoredSchemaPrefListEditor_add_schema = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0441\u0445\u0435\u043C\u044B
-
 IgnoredSchemaPrefListEditor_black_list_schema_ignor = \u042D\u0442\u0438 \u0441\u0445\u0435\u043C\u044B \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u0443\u044E\u0442\u0441\u044F \u043F\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 \u0431\u0430\u0437 \u0434\u0430\u043D\u043D\u044B\u0445.
-
-IgnoredSchemaPrefListEditor_schema_name = \u0418\u043C\u044F \u0441\u0445\u0435\u043C\u044B
 
 IgnoredSchemaPrefListEditor_white_list_schema_ignor = \u0412\u0441\u0435 \u0441\u0445\u0435\u043C\u044B, \u043A\u0440\u043E\u043C\u0435 \u044D\u0442\u0438\u0445, \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u0443\u044E\u0442\u0441\u044F \u043F\u0440\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 \u0431\u0430\u0437 \u0434\u0430\u043D\u043D\u044B\u0445.
 
@@ -604,6 +600,8 @@ PgPassDialog_import = \u0418\u043C\u043F\u043E\u0440\u0442
 
 PgPassDialog_title = \u0421\u043F\u0438\u0441\u043E\u043A \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A\u043E\u0432 \u0438\u0437 pgpass
 
+PgRenameRefactoringInputPage_new_name = \u041D\u043E\u0432\u043E\u0435 \u0438\u043C\u044F: 
+
 PrefListEditor_cannot_add = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442!
 
 ProjectEditorDiffer_apply_db = \u0411\u0414
@@ -643,8 +641,6 @@ ProjectEditorDiffer_lib_change_warning_title = \u0418\u0437\u043C\u0435\u043D\u0
 ProjectEditorDiffer_library_duplication_exception = \u0412 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0430\u0445 pgCodeKeeper \u043D\u0430\u0439\u0434\u0435\u043D\u044B \u043F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432. \u042D\u0442\u043E \u0437\u0430\u043F\u0440\u0435\u0449\u0435\u043D\u043E \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430\u043C\u0438 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A \u043F\u0440\u043E\u0435\u043A\u0442\u0430.
 
 ProjectEditorDiffer_no_differences = \u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E.
-
-ProjectEditorDiffer_not_selected = <\u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u043E>
 
 ProjectEditorDiffer_override_cancel = \u041E\u0442\u043C\u0435\u043D\u0430
 
