--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -723,6 +723,7 @@ QuickUpdate_updating_db = Updating DB
 QuickUpdate_updating_project = Updating Project
 
 RenameDefinitionChange_error_resource_already_exists = A file or folder with this name already exists
+RenameDefinitionProcessor_rename_object=Rename object
 
 SQLEditorCompletionProcessor_show_keywords = Press "{0}" to show Objects/Keywords
 
