--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -311,6 +311,8 @@ GeneralPrefPage_clean_parser_cache = Clear parser cache
 
 GeneralPrefPage_enable_body_dependencies = Enable full dependencies from bodies of functions and procedures (experimental)
 
+GeneralPrefPage_format_object_code_automatically = Format object code automatically
+
 GeneralPrefPage_ignore_column_order = Ignore differences in table column order
 
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
