added missing menu item for find references command; l10n

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -39,6 +39,7 @@ command.mnemonic.Diff                = D
 command.mnemonic.diffWizard          = D
 command.mnemonic.feedback            = F
 command.mnemonic.normalizeProject    = N
+command.name.FindReferences          = Find References
 command.name.addBuilder              = Add pgCodeKeeper Builder
 command.name.feedback                = Feedback
 command.name.normalizeProject        = Normalize Project...
