--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -39,6 +39,7 @@ command.mnemonic.Diff                = \u0414
 command.mnemonic.diffWizard          = \u0421
 command.mnemonic.feedback            = \u0441
 command.mnemonic.normalizeProject    = \u041D
+command.name.FindReferences          = \u041D\u0430\u0439\u0442\u0438 \u0441\u0441\u044B\u043B\u043A\u0438
 command.name.addBuilder              = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0431\u043E\u0440\u0449\u0438\u043A pgCodeKeeper
 command.name.feedback                = \u041E\u0431\u0440\u0430\u0442\u043D\u0430\u044F \u0441\u0432\u044F\u0437\u044C
 command.name.normalizeProject        = \u041D\u043E\u0440\u043C\u0430\u043B\u0438\u0437\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u043E\u0435\u043A\u0442...
