Changed behavior when had errors in secure storage
Added option of the savng passwords in secure storage

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -113,11 +113,11 @@ DbStorePrefPage_pg_pass_file_select_title = Select .pgpass file
 
 DbStorePrefPage_pg_pass_import_tooltip = Import data from pgpass
 
-DbStorePrefPage_secure_storage_error_text_linux = Error while saving passwords in the secure storage: {0}.\n\nMake sure that default keychain exists in your system and is unlocked. If keychains are unavailable you may switch secure storage to use master-password. To do that disable Linux integration in the General -> Security -> Secure Storage preference page.\n\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nContinue without saving passwords?
+DbStorePrefPage_secure_storage_error_text_linux = Error while saving passwords in the secure storage: {0}.\n\nMake sure that default keychain exists in your system and is unlocked. If keychains are unavailable you may switch secure storage to use master-password. To do that disable Linux integration in the General -> Security -> Secure Storage preference page.\n\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDo disable secure storage option and keep password in .xml file?
 
-DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords in the secure storage: {0}.
+DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords in the secure storage: {0}.\n\nFix that in the General -> Security -> Secure Storage preference page.
 
-DbStorePrefPage_secure_storage_error_title = Error while saving passwords
+DbStorePrefPage_secure_storage_error_title = Error while saving passwords  To do that disable Linux integration in the General -> Security -> \n Secure Storage preference page.
 
 DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
@@ -318,6 +318,8 @@ GeneralPrefPage_ignore_column_order = Ignore differences in table column order
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
+
+GeneralPrefPage_save_in_security_storage = Save passwords in security storage
 
 GeneralPrefPage_show_diff_errors = Show errors while getting changes
 
@@ -759,7 +761,7 @@ SQLEditorFormatterPrefPage_whitespace = Spaces
 
 SQLEditorInformationControl_quick_fix_available = Quick fix available:
 
-SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available=\ quick fixes available:
+SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available = \ quick fixes available:
 
 SQLEditorMainPage_bracket_highlighting = Bracket highlighting
 
