Added preference for limitation of count SELECT results in UI

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -319,6 +319,8 @@ GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification 
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
+GeneralPrefPage_set_limit = Set limit of rows for select results:
+
 GeneralPrefPage_show_diff_errors = Show errors while getting changes
 
 GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recommended by PostgreSQL)
@@ -759,7 +761,7 @@ SQLEditorFormatterPrefPage_whitespace = Spaces
 
 SQLEditorInformationControl_quick_fix_available = Quick fix available:
 
-SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available=\ quick fixes available:
+SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available = \ quick fixes available:
 
 SQLEditorMainPage_bracket_highlighting = Bracket highlighting
 
