improved LibraryLoader for nested libraries
fixed infinite recursion in case of cyclic library dependencies
made loading nested libraries optional
added a loadNested option in XML, refactored XmlStore
added UI for the option
l10n

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -143,6 +143,9 @@ DependencyProperties_add_uri = Add URL
 
 DependencyProperties_attention = Attention
 
+DependencyProperties_clear_cache=Clear library cache?
+DependencyProperties_clear_cache_descr=This will clear all cached libraries that have been downloaded or extracted. Continue?
+DependencyProperties_clear_cache_error=Error while clearing library cache
 DependencyProperties_clear_libraries_cache=Clear libraries cache
 DependencyProperties_connection_start = Database connection string must start with 'jdbc:'
 
@@ -155,6 +158,8 @@ DependencyProperties_enter_uri = Enter URL
 DependencyProperties_ignore_priv_warn = Ignoring privileges and owners will lead to the database setting the owners to its current user. Objects' privileges will also be defaulted using the current user.\nThis behaviour is usually undesirable. To avoid it you should save some "baseline" privileges and owners as overrides in the project. To do so, compare the project with a database where "baseline" privileges are available, and save the differences using the "override" option in the Project Update dialog.
 
 DependencyProperties_ignore_privileges = Ignore privileges/owners
+DependencyProperties_load_dependencies=Load dependencies of these libraries
+DependencyProperties_load_nested=Load nested dependencies
 
 DependencyProperties_owner = Owner
 
