--- a/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
+++ b/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
@@ -11,8 +11,8 @@ Table_TypeParameterChange = TYPE change - table: {0} original: {1} new: {2}
 
 UnknownDBFormat = Unknown DB format: {0}
 
-XmlStore_read_error = Error while reading history XML: {0}
+XmlStore_read_error = Error while reading XML store: {0}
 
 XmlStore_root_error = XML root element name is not as requested
 
-XmlStore_write_error = Error while writing history XML: {0}
+XmlStore_write_error = Error while writing XML store: {0}
