--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -737,6 +737,7 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
+ReferenceSearchResult_matches=''{0}'' - {1} matches
 RenameDefinitionChange_error_resource_already_exists = A file or folder with this name already exists
 
 RenameDefinitionProcessor_rename_object = Rename object
