fixed error messages for limited queries; misc cleanup; l10n

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -113,11 +113,12 @@ DbStorePrefPage_pg_pass_file_select_title = Select .pgpass file
 
 DbStorePrefPage_pg_pass_import_tooltip = Import data from pgpass
 
+DbStorePrefPage_secure_storage_error = Secure storage error: 
+
 DbStorePrefPage_secure_storage_error_text_linux = Error while saving passwords in the secure storage: {0}.\n\nMake sure that default keychain exists in your system and is unlocked. If keychains are unavailable you may switch secure storage to use master-password. To do that disable Linux integration in the General -> Security -> Secure Storage preference page.\n\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
 
 DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords in the secure storage: {0}.\n\nSee General -> Security -> Secure Storage preference page for possible solutions.\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
 
-DbStorePrefPage_secure_storage_error=Secure storage error: 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
 DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
@@ -333,7 +334,8 @@ GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
 GeneralPrefPage_save_in_security_storage = Save passwords in security storage
-GeneralPrefPage_set_limit = Set limit of rows for select results:
+
+GeneralPrefPage_set_limit = Limit SELECT rows (0 to disable):
 
 GeneralPrefPage_show_diff_errors = Show errors while getting changes
 
