--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -333,7 +333,7 @@ GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification 
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
-GeneralPrefPage_save_in_security_storage = Save passwords in security storage
+GeneralPrefPage_save_in_security_storage = Save passwords in Eclipse secure storage
 
 GeneralPrefPage_set_limit = Limit SELECT rows (0 to disable):
 
