--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -15,6 +15,8 @@ ConvertProject_select_type_desc = Convert to MS SQL or PostgreSQL project?
 
 ConvertProject_select_type_title = Project type
 
+DbMenu_no_group = No group
+
 DbPropertyListEditor_already_present = Entry "{0}" is already present in the list!
 
 DbPropertyListEditor_field_name = Name:
@@ -40,6 +42,8 @@ DbStoreCombo_db_binding_property_title = Project is bound to database
 DbStoreEditorDialog_auto_generation = Auto-generate
 
 DbStoreEditorDialog_auto_generation_description = The name of the entry will be generated based on connection parameters
+
+DbStoreEditorDialog_choice_db_group = Choice DB group
 
 DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
@@ -106,6 +110,10 @@ DbStorePrefPage_action_copy = Copy DB connection
 DbStorePrefPage_action_edit = Edit DB connection
 
 DbStorePrefPage_already_present = Entry "{0}" is already present in the list!
+
+DbStorePrefPage_db_group_0 = DB Group
+
+DbStorePrefPage_db_group_1 = DB
 
 DbStorePrefPage_pg_pass_file_filter = pgpass files
 
@@ -406,6 +414,8 @@ IgnoredSchemaPrefListEditor_black_list_schema_ignor = These schemas are ignored 
 IgnoredSchemaPrefListEditor_white_list_schema_ignor = All schemas except these are ignored when loading databases.
 
 ImportProjWizard_title = Import pgCodeKeeper project
+
+LabelPicker_choice_db = Choice db
 
 LibraryContainer_root = Referenced Libraries
 
