fixed IF NOT EXISTS generation; naming; l10n
IF NOT EXISTS was enabled by a wrong option

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -125,9 +125,9 @@ DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
 
-DbUpdatePrefPage_option_drop_object=Print DROP before CREATE statement
+DbUpdatePrefPage_option_drop_object = Print DROP before CREATE statement
 
-DbUpdatePrefPage_option_if_exists=Print IF NOT EXISTS/IF EXISTS
+DbUpdatePrefPage_option_if_exists = Print CREATE IF NOT EXISTS / DROP IF EXISTS
 
 DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks)
 
