--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -107,6 +107,16 @@ DbStorePrefPage_action_edit = Edit DB connection
 
 DbStorePrefPage_already_present = Entry "{0}" is already present in the list!
 
+DbStorePrefPage_export_db = Export db connections's list in file
+
+DbStorePrefPage_import_db_list = Import db connections's list from file
+
+DbStorePrefPage_open_db_list = Open of DB connections list
+
+DbStorePrefPage_save_db_list = Save of DB connections list
+
+DbStorePrefPage_xml_files = XML files
+
 DbStorePrefPage_pg_pass_file_filter = pgpass files
 
 DbStorePrefPage_pg_pass_file_select_title = Select .pgpass file
