--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -15,7 +15,7 @@ ConvertProject_select_type_desc = Convert to MS SQL or PostgreSQL project?
 
 ConvertProject_select_type_title = Project type
 
-DbMenu_no_group = No group
+DbMenu_no_group = [no group]
 
 DbPropertyListEditor_already_present = Entry "{0}" is already present in the list!
 
@@ -43,7 +43,7 @@ DbStoreEditorDialog_auto_generation = Auto-generate
 
 DbStoreEditorDialog_auto_generation_description = The name of the entry will be generated based on connection parameters
 
-DbStoreEditorDialog_choice_db_group = Choice DB group
+DbStoreEditorDialog_choice_db_group = DB Group:
 
 DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
@@ -111,9 +111,9 @@ DbStorePrefPage_action_edit = Edit DB connection
 
 DbStorePrefPage_already_present = Entry "{0}" is already present in the list!
 
-DbStorePrefPage_db_group_0 = DB Group
+DbStorePrefPage_db = DB
 
-DbStorePrefPage_db_group_1 = DB
+DbStorePrefPage_db_group = Group
 
 DbStorePrefPage_export_db = Export connection list
 
@@ -447,7 +447,7 @@ IgnoredSchemaPrefListEditor_white_list_schema_ignor = All schemas except these a
 
 ImportProjWizard_title = Import pgCodeKeeper project
 
-LabelPicker_choice_db = Choice db
+LabelPicker_choice_db = [choose DB]
 
 LibraryContainer_root = Referenced Libraries
 
