--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -16,7 +16,7 @@ ConvertProject_select_type_desc = \u0421\u043A\u043E\u043D\u0432\u0435\u0440\u04
 
 ConvertProject_select_type_title = \u0422\u0438\u043F \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
-DbMenu_no_group = \u0411\u0435\u0437 \u0433\u0440\u0443\u043F\u043F\u044B
+DbMenu_no_group = [\u0431\u0435\u0437 \u0433\u0440\u0443\u043F\u043F\u044B]
 
 DbPropertyListEditor_already_present = \u0417\u0430\u043F\u0438\u0441\u044C "{0}" \u0443\u0436\u0435 \u043F\u0440\u0438\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u0441\u043F\u0438\u0441\u043A\u0435!
 
@@ -44,7 +44,7 @@ DbStoreEditorDialog_auto_generation = A\u0432\u0442\u043E\u0433\u0435\u043D\u043
 
 DbStoreEditorDialog_auto_generation_description = \u0418\u043C\u044F \u0437\u0430\u043F\u0438\u0441\u0438 \u0431\u0443\u0434\u0435\u0442 \u0441\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u043E \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0435 \u043F\u0430\u0442\u0430\u043C\u0435\u0442\u0440\u043E\u0432 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
 
-DbStoreEditorDialog_choice_db_group = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0433\u0440\u0443\u043F\u043F\u0443 \u0431\u0434
+DbStoreEditorDialog_choice_db_group = \u0413\u0440\u0443\u043F\u043F\u0430 \u0411\u0414:
 
 DbStoreEditorDialog_connect_to_ms = \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0430\u0442\u044C\u0441\u044F \u043A \u0441\u0435\u0440\u0432\u0435\u0440\u0443 MS SQL
 
@@ -112,10 +112,9 @@ DbStorePrefPage_action_edit = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u
 
 DbStorePrefPage_already_present = \u0417\u0430\u043F\u0438\u0441\u044C "{0}" \u0443\u0436\u0435 \u043F\u0440\u0438\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u0441\u043F\u0438\u0441\u043A\u0435!
 
-DbStorePrefPage_db_group_0 = \u0413\u0440\u0443\u043F\u043F\u0430 \u0411\u0414
+DbStorePrefPage_db = \u0411\u0414
 
-DbStorePrefPage_db_group_1 = \u0411\u0414
-
+DbStorePrefPage_db_group = \u0413\u0440\u0443\u043F\u043F\u0430
 
 DbStorePrefPage_export_db = \u042D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043F\u0438\u0441\u043E\u043A \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0439
 
@@ -449,7 +448,7 @@ IgnoredSchemaPrefListEditor_white_list_schema_ignor = \u0412\u0441\u0435 \u0441\
 
 ImportProjWizard_title = \u0418\u043C\u043F\u043E\u0440\u0442 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 pgCodeKeeper
 
-LabelPicker_choice_db = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0431\u0434
+LabelPicker_choice_db = [\u0432\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0411\u0414]
 
 LibraryContainer_root = \u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0438
 
