Renamed params in DbMenuStorePicker, DbStoreEditorDialog, IPreferenceStore, NewProjWizard; method name in DBStoreMenu, DbStorePrefPage. Replaced lambda by references in method in ProjectEditorDiffer, NewProjWizard.
Other fixes, l10n

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -43,7 +43,7 @@ DbStoreEditorDialog_auto_generation = Auto-generate
 
 DbStoreEditorDialog_auto_generation_description = The name of the entry will be generated based on connection parameters
 
-DbStoreEditorDialog_choice_db_group = DB Group:
+DbStoreEditorDialog_choice_db_group = Group:
 
 DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
