--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -44,7 +44,7 @@ DbStoreEditorDialog_auto_generation = A\u0432\u0442\u043E\u0433\u0435\u043D\u043
 
 DbStoreEditorDialog_auto_generation_description = \u0418\u043C\u044F \u0437\u0430\u043F\u0438\u0441\u0438 \u0431\u0443\u0434\u0435\u0442 \u0441\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u043E \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0435 \u043F\u0430\u0442\u0430\u043C\u0435\u0442\u0440\u043E\u0432 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
 
-DbStoreEditorDialog_choice_db_group = \u0413\u0440\u0443\u043F\u043F\u0430 \u0411\u0414:
+DbStoreEditorDialog_choice_db_group = \u0413\u0440\u0443\u043F\u043F\u0430:
 
 DbStoreEditorDialog_connect_to_ms = \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0430\u0442\u044C\u0441\u044F \u043A \u0441\u0435\u0440\u0432\u0435\u0440\u0443 MS SQL
 
