Added support of adding Pre/Post script in migration script

--- a/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
+++ b/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
@@ -3,6 +3,8 @@
 
 Connection_DatabaseJdbcAccessError = Error while reading database schema via JDBC, error occured while processing {1}\n{0}
 
+PgDiff_read_error = Error while reading file: 
+
 # Storage
 Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new table has no STORAGE set but in old table storage was set. Unable to determine STORAGE type.
 
