--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -121,6 +121,8 @@ DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords i
 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
+DbUpdatePrefPage_add_pre_post_script = Add PRE/POST script in migration script
+
 DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
@@ -182,6 +184,8 @@ DependencyProperties_safe_mode = Disallow overrides
 DependencyProperties_safe_mode_desc = Stop with an error when objects in project and libraries share the same signature.\nOtherwise, use the object loaded first, i.e. one in the project or in the top-most library.
 
 DependencyProperties_select_directory = Select directory
+
+Differ_read_error = Error while reading file: 
 
 DiffPaneViewer_project = Project
 
@@ -636,6 +640,10 @@ PgPassDialog_title = Pgpass sources list
 PgRenameRefactoringInputPage_new_name = New Name: 
 
 PrefListEditor_cannot_add = Cannot add item!
+
+PrePostScriptPrefPage_post = Edit POST script
+
+PrePostScriptPrefPage_pre = Edit PRE script
 
 ProjectEditorDiffer_apply_db = DB
 
