--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -636,6 +636,10 @@ PgPassDialog_title = \u0421\u043F\u0438\u0441\u043E\u043A \u0438\u0441\u0442\u04
 
 PgRenameRefactoringInputPage_new_name = \u041D\u043E\u0432\u043E\u0435 \u0438\u043C\u044F: 
 
+PrePostScriptPrefPage_post = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C POST \u0441\u043A\u0440\u0438\u043F\u0442
+
+PrePostScriptPrefPage_pre = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C PRE \u0441\u043A\u0440\u0438\u043F\u0442
+
 PrefListEditor_cannot_add = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442!
 
 ProjectEditorDiffer_apply_db = \u0411\u0414
