Fixed exception, improved cli, PrePostScriptPrefPage, other scripts

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -82,7 +82,7 @@ page.name.keeperPrefPage      = pgCodeKeeper
 page.name.keeperPropPage      = pgCodeKeeper
 page.name.libraryDependencies = Library dependencies
 page.name.pgProjectEditor     = Project Editor
-page.name.prepostscript       = PRE/POST script
+page.name.prepostscript       = PRE/POST scripts
 page.name.sqlEditor           = SQL Editor
 page.name.sqlEditorColors     = Syntax Coloring
 page.name.sqlEditorFormatter  = Formatter
