Added GUI for trustServerCertificate MSSQL option in dbstore editing dialog window

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -71,6 +71,8 @@ DbStoreEditorDialog_ignore_file_list = Ignored objects files
 
 DbStoreEditorDialog_learn_more = <a>Learn more</a>...
 
+DbStoreEditorDialog_ms_cert = MS SQL cert
+
 DbStoreEditorDialog_ms_sql_database = MS SQL database
 
 DbStoreEditorDialog_pgcodekeeperignore_files_filter = pgcodekeeperignore files
@@ -86,6 +88,8 @@ DbStoreEditorDialog_success = Success
 DbStoreEditorDialog_successfull_connection = Connection to database is successfull
 
 DbStoreEditorDialog_test_connection = Test connection
+
+DbStoreEditorDialog_trust_mssql = Trust MS SQL certificate
 
 DbStoreEditorDialog_use_win_auth = use Windows authentication for MS SQL Server
 
